# PticaGovorun

./: .gitignore  README.md
TranscriberUI/: TranscriberUI.vcxproj  TranscriberUI.vcxproj.filters  main.cpp  transcribermainwindow.cpp  transcribermainwindow.h  transcribermainwindow.ui
TranscriberUI/GeneratedFiles/: ui_transcribermainwindow.h
TranscriberUI/GeneratedFiles/Debug/: moc_transcribermainwindow.cpp
build-config/: PticaGovorunCommon.props  Qt.props  TranscriberUISolution.sln
data/: phoneticDictFiller.xml  phoneticDictUkBroken.xml  phoneticDictUkKnown.xml
data/PhoneticDict/: phoneticDictFiller.xml  phoneticDictUkBroken.xml  phoneticDictUkKnown.xml
data/SpeechAnnot/finance.ua-pynzenykvm/: 2011-04-pynzenyk-q_11.xml  2011-04-pynzenyk-q_17.xml
data/SpeechAnnot/ncru1-MytIstoriji/: 618516.xml  633385.xml  700020.xml  701854.xml  702337.xml
data/SpeechAnnot/ncru1-ProTseGovorat/: 839716_3m52s-6m47s.xml  839971_3m15s-5m42s.xml  849331_0m45s-2m46s.xml  857381_3m28s-6m07s.xml  857636_3m36s-5m40s.xml  857888_3m20s-6m05s.xml  864521_3m37s-6m30s.xml  866079_3m13s-5m25s.xml  866339_3m18s-6m02s.xml  866591_0m37s-3m21s.xml
data/SpeechAnnot/ncru1-slovo/: 142072.xml  22229.xml  267501.xml  274952.xml  27641.xml  316131.xml  642283.xml  685849.xml  794911.xml  88997.xml  96391.xml
src/: CMakeLists.txt  PticaGovorun.pro
src/PticaGovorunBackend/: AppHelpers.cpp  AppHelpers.h  ArpaLanguageModel.cpp  ArpaLanguageModel.h  AudioSpeechDecoder.cpp  AudioSpeechDecoder.h  CMakeLists.txt  ClnUtils.cpp  ClnUtils.h  ComponentsInfrastructure.h  CoreUtils.cpp  CoreUtils.h  FileHelpers.cpp  FileHelpers.h  FlacUtils.cpp  FlacUtils.h  G729If.cpp  G729If.h  InteropPython.cpp  InteropPython.h  JuliusIfHelpers.h  JuliusToolNativeWrapper.cpp  JuliusToolNativeWrapper.h  KaldiModel.cpp  KaldiModel.h  LangStat.cpp  LangStat.h  LangStatSerializatinoYaml.cpp  MLUtils.cpp  MLUtils.h  PhoneAlignment.cpp  PhoneAlignment.h  PhoneticSerializationXml.cpp  PhoneticSerializationYaml.cpp  PhoneticService.cpp  PhoneticService.h  PhoneticStress.cpp  PticaGovorunBackend.cpp  PticaGovorunBackend.pro  PticaGovorunBackend.vcxproj  (+30 more)
src/PticaGovorunBackendScripts/: DecoderResultsCache.py  PticaGovorunEvaluate1.py  PticaGovorunMatlabProxy.prj  RunNeuralNets1.m  TestCaffe1.ipynb  TestCaffeRunner1.py
src/PticaGovorunInteropMatlab/: PreEmphasis.m  PticaGovorunInteropMatlab.vcxproj  PticaGovorunInteropMatlab.vcxproj.filters  RateOfChangeWindowed.m  RunMatlabInterop.m  RunNeuralNets1.m  RunNeuralNetsWithCrossValidation.m  RunSpeechProcessing1.m  accuracyTopN.m  classifySpeechMfcc.m  loadNet.m  loadNetAndSimulate.m  netPatternnet282.mat  netPatternnet282old1.mat  readme.txt  simulateNet.m
src/PticaGovorunSimpleConsoleClient/: ComputeSpeechMfccTester.cpp  DslDictionaryConvertRunner.cpp  EditDistanceTests.cpp  FlacRunner.cpp  MatlabTester.cpp  MigrateXmlSpeechAnnotRunner.cpp  PdfReaderRunner.cpp  PhoneticSpellerTests.cpp  PrepareSphinxTrainData.cpp  PronunciationChecksRunner.cpp  PticaGovorunSimpleConsoleClient.cpp  PticaGovorunSimpleConsoleClient.vcxproj  PticaGovorunSimpleConsoleClient.vcxproj.filters  ReadMe.txt  RecognizeSpeechInBatchTester.cpp  RecognizeSpeechSphinxTester.cpp  ResampleAudioTester.cpp  RunBuildLanguageModel.cpp  RunPrepareTrainModelSphinx.cpp  RunTextParser.cpp  SegmentsLoaderRunner.cpp  SliceTester.cpp  SphinxIfRunner.cpp  StressedSyllableRunner.cpp  UkrainianPhoneticSplitterRunner.cpp  VadRunner.cpp  stdafx.cpp
src/PticaGovorunTests/: FlacTests.cpp  GrowOnlyPinArenaTests.cpp  PhonationTextAlignmentTests.cpp  PhoneticTranscriptionTests.cpp  PticaGovorunTests.vcxproj  PticaGovorunTests.vcxproj.filters  SplitUtteranceIntoPronuncListTests.cpp  StringEditDistanceTests.cpp  TextParseRunsTests.cpp  TextParsingTests.cpp  TextToPhonesTests.cpp  main.cpp
src/PticaGovorunTestsGTest/: IntToUaWordConverterTests.cpp  PticaGovorunTestsGTest.vcxproj  PticaGovorunTestsGTest.vcxproj.filters  TextParseRunsTests.cpp  TextParseSentenceTests.cpp  main.cpp
src/TranscriberUI/: AnnotationToolViewModel.cpp  AnnotationToolViewModel.h  AnnotationToolWidget.cpp  AnnotationToolWidget.h  AnnotationToolWidget.ui  AppHelpers.cpp  AppHelpers.h  AudioMarkupNavigator.cpp  AudioMarkupNavigator.h  AudioMarkupNavigatorDialog.cpp  AudioMarkupNavigatorDialog.h  AudioMarkupNavigatorDialog.ui  AudioSamplesWidget.cpp  AudioSamplesWidget.h  AudioSamplesWidget.ui  CMakeLists.txt  FileWorkspaceViewModel.cpp  FileWorkspaceViewModel.h  FileWorkspaceWidget.cpp  FileWorkspaceWidget.h  FileWorkspaceWidget.ui  JuliusRecognizerProvider.cpp  JuliusRecognizerProvider.h  PhoneticDictionaryDialog.cpp  PhoneticDictionaryDialog.h  PhoneticDictionaryDialog.ui  PhoneticDictionaryViewModel.cpp  PhoneticDictionaryViewModel.h  PresentationHelpers.cpp  PresentationHelpers.h  SharedServiceProvider.h  SpeechTranscriptionPaintWidget.cpp  SpeechTranscriptionPaintWidget.h  SpeechTranscriptionPaintWidget.ui  SpeechTranscriptionValidation.cpp  SpeechTranscriptionValidation.h  SpeechTranscriptionViewModel.cpp  SpeechTranscriptionViewModel.h  SpeechTranscriptionWidget.cpp  SpeechTranscriptionWidget.h  (+11 more)
src/TranscriberUI/GeneratedFiles/: ui_AudioSamplesWidget.h  ui_transcribermainwindow.h
src/TranscriberUI/GeneratedFiles/Debug/: moc_AudioSamplesWidget.cpp  moc_TranscriberViewModel.cpp  moc_transcribermainwindow.cpp
src/build-config/: Catch.props  FLAC.props  G729AnnexB.props  GSL.props  LibSampleRate.props  LibSndFile.props  MatlabBuild.props  OpenCV.props  PocketSphinx.props  PortAudio.props  PticaGovorunCommon.props  PticaGovorunSimpleConsoleClient.exe.ini  Qt.props  SFML.props  TranscriberUI.exe.ini  TranscriberUISolution.sln  YamlCpp.props  boost.props  gtest.props  zlib.props
testdata/audio/: ocin_naslidky_golodomoru.flac
testdata/text/: numberExpansion.xml  parseSentence.xml
